// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error render should render with error 1`] = `
<div
  className="Error__root"
>
  <h1
    className="Error__title"
  >
    Some error
  </h1>
  <pre
    className="Error__stack"
  >
    Some stack
  </pre>
</div>
`;

exports[`Error render should render with no error 1`] = `
<div
  className="Error__root"
>
  <h1
    className="Error__title"
  >
    Error
  </h1>
  <p
    className="Error__message"
  >
    Sorry, a critical error occurred on this page.
  </p>
</div>
`;
